# ws-mux-rs

./: Cargo.toml  build.rs
.github/workflows/: ci.yml  release.yml
src/: client.rs  client_native.rs  client_wasm.rs  codegen_impl.rs  error.rs  frame.rs  lib.rs  otel.rs  server.rs
tests/: codegen.rs  round_trip.rs  wasm_client.rs
tests/proto/: test.proto
