[package]
name = "ws-mux"
version = "0.1.0"
edition = "2024"
description = "Lightweight multiplexed RPC over WebSockets with protobuf framing"
license = "MIT"
repository = "https://github.com/hellas-ai/ws-mux-rs"

[features]
default = []
client = ["dep:tokio"]
server = ["dep:tokio"]
native-client = ["client", "dep:futures-util", "dep:tokio-tungstenite"]
wasm-client = ["client", "dep:js-sys", "dep:wasm-bindgen", "dep:wasm-bindgen-futures", "dep:web-sys"]
codegen = ["dep:prost-build", "dep:proc-macro2", "dep:quote"]
compile = ["client", "server", "native-client"]

[dependencies]
futures-core = "0.3"
prost = "0.14"
thiserror = "2"
tracing = "0.1"
tokio = { version = "1", optional = true, features = ["sync", "rt"] }
prost-build = { version = "0.14", optional = true }
proc-macro2 = { version = "1", optional = true }
quote = { version = "1", optional = true }

[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
futures-util = { version = "0.3", optional = true, default-features = false, features = ["sink"] }
tokio-tungstenite = { version = "0.26", optional = true }

[target.'cfg(target_arch = "wasm32")'.dependencies]
js-sys = { version = "0.3", optional = true }
wasm-bindgen = { version = "0.2", optional = true }
wasm-bindgen-futures = { version = "0.4", optional = true }
web-sys = { version = "0.3", optional = true, features = [
  "BinaryType", "CloseEvent", "Event", "MessageEvent", "WebSocket",
] }

[build-dependencies]
prost-build = "0.14"
proc-macro2 = "1"
quote = "1"

[dev-dependencies]
futures-util = "0.3"
tokio = { version = "1", features = ["macros", "rt-multi-thread", "time"] }
prost = "0.14"
