[package]
name = "ws-mux"
version = "0.2.1"
edition = "2024"
rust-version = "1.85"
description = "Lightweight multiplexed RPC over WebSockets with protobuf framing"
license = "MIT"
repository = "https://github.com/hellas-ai/ws-mux-rs"

[features]
default = []
client = ["dep:tokio", "dep:wasm-bindgen-futures"]
server = ["dep:tokio"]
native-client = ["client", "dep:futures-util", "dep:tokio-tungstenite"]
wasm-client = ["client", "dep:js-sys", "dep:wasm-bindgen", "dep:web-sys"]
codegen = ["dep:prost-build", "dep:proc-macro2", "dep:quote"]
otel = ["dep:opentelemetry", "dep:tracing-opentelemetry"]
compile = ["client", "server", "native-client"]

[dependencies]
futures-core = "0.3"
prost = "0.14"
thiserror = "2"
tracing = { version = "0.1", features = ["attributes"] }
opentelemetry = { version = "0.31", optional = true, default-features = false, features = ["trace"] }
tracing-opentelemetry = { version = "0.32", optional = true, default-features = false }
tokio = { version = "1", optional = true, features = ["sync", "rt", "time"] }
prost-build = { version = "0.14", optional = true }
proc-macro2 = { version = "1", optional = true }
quote = { version = "1", optional = true }

[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
futures-util = { version = "0.3", optional = true, default-features = false, features = ["sink"] }
tokio-tungstenite = { version = "0.26", optional = true }

[target.'cfg(target_arch = "wasm32")'.dependencies]
js-sys = { version = "0.3", optional = true }
wasm-bindgen = { version = "0.2", optional = true }
wasm-bindgen-futures = { version = "0.4", optional = true }
web-sys = { version = "0.3", optional = true, features = [
  "BinaryType", "CloseEvent", "Event", "MessageEvent", "WebSocket",
] }

[build-dependencies]
prost-build = "0.14"
proc-macro2 = "1"
quote = "1"

[dev-dependencies]
futures-channel = "0.3"
futures-util = "0.3"
prost = "0.14"

[target.'cfg(not(target_arch = "wasm32"))'.dev-dependencies]
tokio = { version = "1", features = ["macros", "rt-multi-thread", "time", "test-util"] }

[target.'cfg(target_arch = "wasm32")'.dev-dependencies]
wasm-bindgen-test = "=0.3.58"
